<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="4dp">
            <ImageView
                android:id="@+id/launchImageView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:padding="18dp"
                android:src="@drawable/astronautsecond"/>
            <LinearLayout
                android:id="@+id/launchLinearLayout"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="6dp">
                <TextView
                    android:id="@+id/missionTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rocket_name_tv"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/missionDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_tv"
                    android:textSize="15dp"
                    android:layout_margin="2dp"/>
                <TextView
                    android:id="@+id/missionTypeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_tv"
                    android:textSize="15dp"
                    android:layout_margin="2dp"/>

            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:textSize="18sp"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
