<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MissionDetails"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/mission_name_tv"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/missionNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dummy_placeholder"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/description_tv"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/missionDescriptionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dummy_placeholder"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/type_tv"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/missionTypeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dummy_placeholder"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/nasa_info_tv"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/missionInfoURLTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dummy_placeholder"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textColor="#0b6078"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/wiki_info_tv"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/missionWikiURLTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dummy_placeholder"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textColor="#0b6078"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>




    </LinearLayout>



</ScrollView>