<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="12dp"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:id="@+id/launchCardView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="130dp"
                app:cardCornerRadius="2dp"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"

                    android:padding="4dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:scaleType="fitCenter"
                        android:padding="2dp"
                        android:src="@drawable/project"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="@string/launch_schedule_button_text"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="4dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/newsCardView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                app:cardCornerRadius="2dp"
                android:layout_weight="1"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:scaleType="fitCenter"
                        android:padding="2dp"
                        android:src="@drawable/newspaper"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="@string/news_button_text"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="4dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:id="@+id/missionCardView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                app:cardCornerRadius="2dp"
                android:layout_weight="1"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:scaleType="fitCenter"
                        android:padding="2dp"
                        android:src="@drawable/astronaut"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="@string/mission_button_text"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="4dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/galleryCardView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                app:cardCornerRadius="2dp"
                android:layout_weight="1"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:scaleType="fitCenter"
                        android:padding="2dp"
                        android:src="@drawable/photo"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="@string/gallery_button_text"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="4dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="2dp">
            <android.support.v7.widget.CardView
                android:id="@+id/liveCardView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                app:cardCornerRadius="2dp"
                android:layout_weight="1"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:scaleType="fitCenter"
                        android:padding="2dp"
                        android:src="@drawable/satellite"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="@string/nasa_live_button_text"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="4dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/educationCardView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                app:cardCornerRadius="2dp"
                android:layout_weight="1"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:scaleType="fitCenter"
                        android:padding="2dp"
                        android:src="@drawable/space"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="@string/education_button_text"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="4dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>